# robust-multimodal-recommendation

./: .editorconfig  .env.example  .gitattributes  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  demo.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
benchmarks/: __init__.py  test_benchmarks.py
docs/: ARCHITECTURE.md  DEPLOYMENT.md  FAQ.md  FIDELITY_REPORT.md  SETUP.md  USAGE.md
docs/superpowers/specs/: 2026-05-07-gre-mc-design.md
models/: utils.py
rmr/data/: dataset.py  features.py  graph_builder.py
rmr/evaluation/: evaluator.py
rmr/models/: __init__.py  codebook.py  decoder.py  downstream.py  gre_mc.py  positional_encoding.py  retrieval.py  transformer.py  utils.py
rmr/scripts/: train_completion.py  train_recommender.py
rmr/training/: completion_trainer.py
tests/: test_codebook.py  test_completion_trainer.py  test_dataset.py  test_decoder.py  test_download.py  test_downstream.py  test_end_to_end.py  test_evaluator.py  test_features.py  test_graph_builder.py  test_gre_mc.py  test_masking.py  test_metrics.py  test_positional_encoding.py  test_retrieval.py  test_transformer.py  test_utils.py
